examples/test/testpolicy8102.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8102
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key39: value33
      key27: value44
      key20: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value34
      podSelector:
        matchLabels:
          key46: value45
